--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Dáridó Website</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/logo1.png' %}">
 
     <meta
       name="viewport"
