--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -15,6 +15,7 @@
         <button id="popupClose">OK</button>
     </div>
     {% endfor %}
+     <!--
     <div id="loginContent">
         <h1 class="text-center mt-5 mb-4">Dárídó webshop</h1>
         <div class="carouseltartó">
@@ -114,6 +115,31 @@
                 </ul>
             </div>
         </div>
+        -->
+        <div class="container-fluid">
+            <div id="Lapozo" class="carousel slide " data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#Lapozo" data-slide-to="0" class="active"></li>
+                    <li data-target="#Lapozo" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner Lapozo">
+                    <div class="carousel-item active Lapozo">
+                        <img src="static\images\carousel1.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item Lapozo">
+                        <img src="static\images\carousel2.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#Lapozo" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#Lapozo" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
 
 
         <!-- Mit árulunk -->
@@ -123,12 +149,12 @@
                 <img src="static\images\Bunyós Pityu x Mike Tyson - poló (3990 Ft).jpg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <p class="polo fs-5">Személyre szabott stílus és kényelem találkozik a mulatós zene iránti rajongással a pólók és pulóverek kategóriájában. Válogass egyedi design-ok között, melyek kifejezik a mulatós zene szeretetét és tiszteletét. Legyen szó akár Zámbó Jimmy, Delhusa Gjon vagy más ikonikus előadók emblémáiról, ezek a ruhadarabok nem csupán divatos megjelenést biztosítanak, hanem lehetővé teszik számodra, hogy büszkén mutasd meg hová tartozol és milyen zenéket kedvelsz. Kényelmes viseletükkel és minőségi anyagaikkal garantáltan kedvenceddé válnak mindennapi viseletedben, és emlékeztetni fognak arra, hogy a mulatós zene mindig veled van.</p>
+                <p class="polo fs-5 homep">Személyre szabott stílus és kényelem találkozik a mulatós zene iránti rajongással a pólók és pulóverek kategóriájában. Válogass egyedi design-ok között, melyek kifejezik a mulatós zene szeretetét és tiszteletét. Legyen szó akár Zámbó Jimmy, Delhusa Gjon vagy más ikonikus előadók emblémáiról, ezek a ruhadarabok nem csupán divatos megjelenést biztosítanak, hanem lehetővé teszik számodra, hogy büszkén mutasd meg hová tartozol és milyen zenéket kedvelsz. Kényelmes viseletükkel és minőségi anyagaikkal garantáltan kedvenceddé válnak mindennapi viseletedben, és emlékeztetni fognak arra, hogy a mulatós zene mindig veled van.</p>
             </div>
         </div>
         <div class="row masodikresz">
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <p class="lemezek fs-5">Keress mélyreható és érzelmekkel teli zenés élményeket a CD-k és DVD-k széles választékában. Fedezd fel újra az ikonikus mulatós dalokat, vagy gyűjtsd össze a kedvenc előadóid legújabb és leghíresebb albumait. Legyen szó akár Zámbó Jimmy, Delhusa Gjon, Pataky Attila vagy más nagy névről, az általunk kínált CD-k és DVD-k lehetővé teszik számodra, hogy elmerülj a mulatós zene világában bármikor, bárhol. Élvezd az élet zenéjét, és színesítsd az otthoni szórakozást ezekkel a kiváló minőségű hanghordozókkal, melyek méltóak a mulatós zene hagyományaira és hírnevére.</p>
+                <p class="lemezek fs-5 homep">Keress mélyreható és érzelmekkel teli zenés élményeket a CD-k és DVD-k széles választékában. Fedezd fel újra az ikonikus mulatós dalokat, vagy gyűjtsd össze a kedvenc előadóid legújabb és leghíresebb albumait. Legyen szó akár Zámbó Jimmy, Delhusa Gjon, Pataky Attila vagy más nagy névről, az általunk kínált CD-k és DVD-k lehetővé teszik számodra, hogy elmerülj a mulatós zene világában bármikor, bárhol. Élvezd az élet zenéjét, és színesítsd az otthoni szórakozást ezekkel a kiváló minőségű hanghordozókkal, melyek méltóak a mulatós zene hagyományaira és hírnevére.</p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <img src="static\images\Zámbó Jimmy - Karácsony Jimmyvel (CD, 3990 Ft).jpg" class="img-fluid lemezkep" alt="">
@@ -143,7 +169,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2>Üdvözlöm a Mulatós Zene Világában!</h2><br>
-                <p class="polo fs-5">Szeretnénk bemutatni Önnek cégünket, amely a mulatós zene szerelmeseinek kínál minőségi termékeket. Küldetésünk, hogy az igazi mulatós zenét kedvelők számára valódi élményt nyújtsunk, és lehetőséget adjunk nekik arra, hogy kedvenc művészeiket és dalokat viselhessék, illetve gyűjthessék.
+                <p class="polo fs-5 homep">Szeretnénk bemutatni Önnek cégünket, amely a mulatós zene szerelmeseinek kínál minőségi termékeket. Küldetésünk, hogy az igazi mulatós zenét kedvelők számára valódi élményt nyújtsunk, és lehetőséget adjunk nekik arra, hogy kedvenc művészeiket és dalokat viselhessék, illetve gyűjthessék.
 
                     Webáruházunkban széles választékban találhatóak különböző CD-k, pólók, bögrék és ajándéktárgyak, amelyek mindegyike a mulatós zene legnagyobb alakjainak ihletett. Zámbó Jimmy-től a Lagzi Lajcsiig, Pataki Attilától a Kacor Feriig, valamint Bunyós Pityuig, nálunk mindent megtalál, amire a mulatós zene világában vágyik.
 
@@ -153,7 +179,7 @@
         <div class="row masodikresz">
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2>Fedezze fel a Mulatós Zenei Termékek Gazdag Világát!</h2><br>
-                <p class="lemezek fs-5">Ha a mulatós zene világában otthon érzi magát, akkor webáruházunkban garantáltan megtalálja, amit keres. Számos különböző termék várja Önt, hogy kifejezhesse szeretetét és lelkesedését kedvenc mulatós zenészek és dalok iránt.
+                <p class="lemezek fs-5 homep">Ha a mulatós zene világában otthon érzi magát, akkor webáruházunkban garantáltan megtalálja, amit keres. Számos különböző termék várja Önt, hogy kifejezhesse szeretetét és lelkesedését kedvenc mulatós zenészek és dalok iránt.
 
                     A CD-k, pólók, bögrék és ajándéktárgyak mindegyike a mulatós zene nagyjainak inspirációját tükrözi. Legyen szó egy különleges emlékről egy felejthetetlen koncertről, vagy egy kedves ajándékról egy barátnak vagy családtagjának, nálunk mindenki megtalálja a számára tökéletes mulatós zenei terméket.
 
