--- a/store/templates/store/profile.html
+++ b/store/templates/store/profile.html
@@ -296,7 +296,7 @@
             <div class="col-md-7">
                 <div class="card p-3 py-4">
                     <div class="text-center mt-3">
-                        <div style="margin-bottom: 50px;"><h4  class="mt-2 mb-0"><strong>Posztjaim:</strong></h4></div>
+                        <div style="margin-bottom: 50px;"><h4  class="mt-2 mb-0"><strong>Bejegyzések:</strong></h4></div>
                         {% for post in posts %}
                         <div class="wrapper">
                             <div class="card2 post">
