--- a/store/templates/store/owner.html
+++ b/store/templates/store/owner.html
@@ -25,7 +25,7 @@
         <div class="col-md-7">
             <div class="card p-3 py-4"> 
                 <div class="text-center mt-3">
-                    <h3 class="mt-2 mb-0"><strong>Rendeléseim</strong></h3>
+                    <h3 class="mt-2 mb-0"><strong>Rendelések</strong></h3>
                     {% for order in orders %}
                     {% if order.get_cart_total != 0 %}
                     <div class="row sor">
