--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -16,7 +16,7 @@
   <div id="toggleFilter" class="hidden">
   <div style="margin-top: 20px;" class="form-row">
     <div class="form-group col-lg-6 col-md-12 col-sm-12 balance">
-      <label >Márka</label>
+      <label >Előadó</label>
       <select id="inputState" class="form-control" name="brand">
         <option ></option>
         {% for bran in brands %}
