--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -17,7 +17,7 @@
   <div style="margin-top: 20px;" class="form-row">
     <div class="form-group col-lg-6 col-md-12 col-sm-12 balance">
       <label >Előadó</label>
-      <select id="inputState" class="form-control" name="brand">
+      <select id="inputCategory" class="form-control" name="brand">
         <option ></option>
         {% for bran in brands %}
         <option value="{{ bran }}">{{ bran }}</option>
@@ -26,36 +26,45 @@
     </div>
     <div class="form-group col-lg-6 col-md-12 col-sm-12 balance">
       <label>Kategória</label>
-      <select id="inputState" class="form-control" name="category">
+      <select id="inputBrand" class="form-control" name="category">
         <option ></option>
         {% for cat in categories %}
         <option value="{{ cat }}">{{ cat }}</option>
         {% endfor %}
       </select>
-    </div>
-    
+    </div> 
   </div>
-    
   
   <div style="margin-bottom: 10px;" class="form-row">
     <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
       <label>Értékelés</label>
-      <input type="number" min="0" max="4.9" step="0.1" class="form-control" id="viewCountMin" placeholder="0" name="rating_min">
+      <input type="number" min="0" max="4.9" step="0.1" class="form-control" id="ratingMin" name="rating_min">
     </div>
     <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
       <label>Értékelés</label>
-      <input type="number" min="0" max="5" step="0.1" class="form-control" id="viewCountMax" placeholder="5" name="rating_max">
+      <input type="number" min="0" max="5" step="0.1" class="form-control" id="ratingMax" name="rating_max">
     </div>
     <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
       <label>Ár</label>
-      <input type="number" min="0" step="1" class="form-control" id="viewCountMin" placeholder="1500 Ft" name="price_min">
+      <input type="number" min="0" step="1" class="form-control" id="priceMin" name="price_min">
     </div>
     <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
       <label>Ár</label>
-      <input type="number" min="0" step="1" class="form-control" id="viewCountMax" placeholder="14990 Ft" name="price_max">
+      <input type="number" min="0" step="1" class="form-control" id="priceMax" name="price_max">
     </div>
     
   </div>
+
+  <div class="checkbox-wrapper-55" style="margin-bottom: 20px;">
+    <label class="rocker rocker-small" style="display: block; margin: auto;">
+      <input type="checkbox" id="digital" name="digital" value="false" onclick="toggleCheckbox()">
+      <span class="switch-left">Igen</span>
+      <span class="switch-right">Nem</span>
+    </label>
+    <p style="text-align: center; margin-top: 5px;">Digitális termék</p>
+  </div>
+
+
   </div>
     <div class="form-group">
       <div class="form-check">
@@ -64,9 +73,10 @@
     </div>
     <div class="form-group">
       <div class="form-check">
-        <button style="background-color: rgb(255, 119, 0); width: 200px; margin: auto; display: block; font-weight: bold;" class="button-33 add-to-cart" role="button">Termékek újratöltése</button>
+        <button id="resetFilter" style="background-color: rgb(255, 119, 0); width: 200px; margin: auto; display: block; font-weight: bold;" class="button-33 add-to-cart" role="">Szűrő alapértelmezése</button>
       </div>
     </div>
+    
 </form>
 
 
@@ -208,7 +218,4 @@
 </div>
 
 <script src="{% static 'js/filter.js' %}"></script>
-
-
-
 {% endblock content %}
