--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -16,7 +16,7 @@
   <div id="toggleFilter" class="hidden">
   <div style="margin-top: 20px;" class="form-row">
     <div class="form-group col-lg-6 col-md-12 col-sm-12 balance">
-      <label >Előadó</label>
+      <label>Előadó</label>
       <select id="inputCategory" class="form-control" name="brand">
         <option ></option>
         {% for bran in brands %}
@@ -37,19 +37,19 @@
   
   <div style="margin-bottom: 10px;" class="form-row">
     <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
-      <label>Értékelés</label>
+      <label>Értékelés (min)</label>
       <input type="number" min="0" max="4.9" step="0.1" class="form-control" id="ratingMin" name="rating_min">
     </div>
     <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
-      <label>Értékelés</label>
+      <label>Értékelés (max)</label>
       <input type="number" min="0" max="5" step="0.1" class="form-control" id="ratingMax" name="rating_max">
     </div>
     <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
-      <label>Ár</label>
+      <label>Ár (min)</label>
       <input type="number" min="0" step="1" class="form-control" id="priceMin" name="price_min">
     </div>
     <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
-      <label>Ár</label>
+      <label>Ár (max)</label>
       <input type="number" min="0" step="1" class="form-control" id="priceMax" name="price_max">
     </div>
     
