--- a/store/templates/store/profile.html
+++ b/store/templates/store/profile.html
@@ -50,7 +50,7 @@
                                 <span id="closeUpdateProfileBtn" class="hidden updateProfileBtn bg-warning p-1 px-4 rounded text-white ">Szerkesztés bezárása</span>
                             </div>
                             {% endif %}
-                    <div id="profileData">
+                    <div id="profileData" class="profileData">
                         <h4 class="mt-2 mb-0"><strong>{{profile.name}}</strong></h4>
                         <div class="block" style="margin-bottom: 20px; font-weight: 500;">
                             {% if profile.email != None %}
