--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -15,8 +15,8 @@
         <button id="popupClose">OK</button>
     </div>
     {% endfor %}
-     <!--
     <div id="loginContent">
+        <!--
         <h1 class="text-center mt-5 mb-4">Dárídó webshop</h1>
         <div class="carouseltartó">
             <div class="carousel">
@@ -309,7 +309,7 @@
 </body>
 
 {% if messages %}
-<script>
+<script>loginContent
     popup = document.getElementById('popup');
     content = document.getElementById('loginContent')
 
