--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -57,7 +57,7 @@
             <li class="nav-link basic">
               {% if request.user.id is None %}
               <img style="margin-left: 5px;" src="{% static 'images/placeholder_img.jpg' %}" class="ava">
-              <span class="text nav-text"
+              <span style="margin-left: 15px;" class="text nav-text"
                 >Köszöntünk<br /><strong>Vendégfelhasználó</strong></span
               >
               {% else %}
